# intpart

./: .gitignore  CMakeLists.txt  Intpart.cpp  Intpart.hpp  README.md  requeriments.md  tets.js  tets.ts
test/: IntPartTests.cpp
